# custom-detection-validator

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: index.html
src/cdv/: cli.py  web.py
src/cdv/output/: formatter.py
src/cdv/parser/: extractor.py  query_model.py  tokenizer.py
src/cdv/rules/: columns.py  tables.py
src/cdv/static/: index.html
src/cdv/validators/: action_columns.py  base.py  best_practices.py  engine.py  non_supported_columns.py  nrt_eligibility.py  required_columns.py  table_validator.py
tests/: test_action_columns.py  test_best_practices.py  test_engine_integration.py  test_extractor.py  test_non_supported_columns.py  test_nrt_eligibility.py  test_required_columns.py  test_table_validator.py  test_tables.py  test_tokenizer.py  test_web.py
