[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-detection-validator"
version = "0.2.0"
description = "Pre-validate KQL queries for Microsoft Defender XDR custom detection rules"
requires-python = ">=3.9"
license = {text = "MIT"}

[project.scripts]
cdv = "cdv.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cdv = ["static/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
